# vt-tui-scanner

./: .bandit.yml  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  vt-scan.ps1
.github/workflows/: ci.yml  release.yml
src/: __init__.py  main.py
src/models/: __init__.py  scan_result.py
src/scanner/: __init__.py  file_scanner.py  url_scanner.py  vt_client.py
src/tui/: __init__.py  app.py  screens.py  widgets.py
src/utils/: __init__.py  config.py  export.py  logger.py
tests/: __init__.py  test_file_scanner.py  test_vt_client.py
